--- a/configs/softmax.yml
+++ b/configs/softmax.yml
@@ -1,16 +1,16 @@
 MODEL:
-  PRETRAIN_PATH: '/home/haoluo/.torch/models/resnet50-19c8e357.pth'
+  PRETRAIN_PATH: '/resnet50-19c8e357.pth'
 
 
 INPUT:
-  SIZE_TRAIN: [256, 128]
-  SIZE_TEST: [256, 128]
+  SIZE_TRAIN: [128, 128]  # SIZE_TRAIN: [256, 128]
+  SIZE_TEST: [128, 128]   # SIZE_TEST: [256, 128]
   PROB: 0.5 # random horizontal flip
   RE_PROB: 0.5 # random erasing
   PADDING: 10
 
 DATASETS:
-  NAMES: ('market1501')
+  NAMES: ('RAP') # NAMES: ('market1501')
 
 DATALOADER:
   SAMPLER: 'softmax'
@@ -39,6 +39,6 @@ SOLVER:
 TEST:
   IMS_PER_BATCH: 128
 
-OUTPUT_DIR: "/home/haoluo/log/reid/market1501/softmax_bs64_256x128"
+OUTPUT_DIR: "/media/ehsan/HDD2TB/PersonReIdentification/reid-strong-baseline/reid_on_RAP_RESULTS"  # OUTPUT_DIR: "/home/haoluo/log/reid/market1501/softmax_bs64_256x128"
 
 
