--- a/configs/softmax_triplet_with_center.yml
+++ b/configs/softmax_triplet_with_center.yml
@@ -9,8 +9,8 @@ MODEL:
 
 
 INPUT:
-  SIZE_TRAIN: [256, 128]
-  SIZE_TEST: [256, 128]
+  SIZE_TRAIN: [128, 128]
+  SIZE_TEST: [128, 128]
   PROB: 0.5 # random horizontal flip
   RE_PROB: 0.5 # random erasing
   PADDING: 10
@@ -19,13 +19,13 @@ DATASETS:
   NAMES: ('market1501')
 
 DATALOADER:
-  SAMPLER: 'softmax_triplet'
+  SAMPLER: 'softmax'
   NUM_INSTANCE: 4
   NUM_WORKERS: 8
 
 SOLVER:
   OPTIMIZER_NAME: 'Adam'
-  MAX_EPOCHS: 120
+  MAX_EPOCHS: 350
   BASE_LR: 0.00035
 
   CLUSTER_MARGIN: 0.3
