--- a/configs/softmax.yml
+++ b/configs/softmax.yml
@@ -1,5 +1,5 @@
 MODEL:
-  PRETRAIN_PATH: '/resnet50-19c8e357.pth'
+  PRETRAIN_PATH: '/home/eshan/.torch/models/resnet50-19c8e357.pth'
 
 
 INPUT:
@@ -14,11 +14,12 @@ DATASETS:
 
 DATALOADER:
   SAMPLER: 'softmax'
-  NUM_WORKERS: 8
+  NUM_WORKERS: 5
 
 SOLVER:
   OPTIMIZER_NAME: 'Adam'
-  MAX_EPOCHS: 120
+  MAX_EPOCHS: 280
+
   BASE_LR: 0.00035
   BIAS_LR_FACTOR: 1
   WEIGHT_DECAY: 0.0005
@@ -32,13 +33,13 @@ SOLVER:
   WARMUP_ITERS: 5
   WARMUP_METHOD: 'linear'
 
-  CHECKPOINT_PERIOD: 20
+  CHECKPOINT_PERIOD: 40
   LOG_PERIOD: 20
   EVAL_PERIOD: 20
 
 TEST:
   IMS_PER_BATCH: 128
 
-OUTPUT_DIR: "/media/ehsan/HDD2TB/PersonReIdentification/reid-strong-baseline/reid_on_RAP_RESULTS"  # OUTPUT_DIR: "/home/haoluo/log/reid/market1501/softmax_bs64_256x128"
+OUTPUT_DIR: "RESULTS/softmax"  # OUTPUT_DIR: "/home/haoluo/log/reid/market1501/softmax_bs64_256x128"
 
 
